# SoftwareImpactHackathon2023_Tracing_dependencies

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Justfile  README.md  notes.tex  openalex.csv.gz.license  pyproject.toml  requirements.txt
archive/centrality_figure/: Makefile
archive/dev-notebooks/: dois-graph.gephi
archive/importtopackage/: PyPI-Map.ipynb  compare_enduser_packages_to_paper_mentions.ipynb.license  doi_to_notebook_packages.ipynb  enduser_doi_to_czi.json  image.png.license  pypi-bigquery.sql  pypi_importmap.json  pypi_importmap_errors.json  unknown_czi.json
archive/notebooks/: preprocess.ipynb.license
archive/quadrants_figure_table/: Makefile  README.md  figure-tikzDictionary  figures.rnw  figures.rnw.license  mentions.csv.gz.license  tables.rnw
centrality_figure/: figure.rnw
data/: README.md  openalex.csv.gz.license
dev-notebooks/: CentralityAnalysis.ipynb  DirectedCoreAnalysis.ipynb
dev-notebooks/.ipynb_checkpoints/: CentralityAnalysis-checkpoint.ipynb  DirectedCoreAnalysis-checkpoint.ipynb
importtopackage/: clone_repos.ipynb  compare_enduser_packages_to_paper_mentions.ipynb  create_package_to_importable_name_map.py  doi_to_notebook_packages.ipynb  enduser_doi_to_czi.json  extract_imports.py  extract_packages.py  find_shared_doi.ipynb  image-3.png.license  pypi-bigquery.sql  pypi-bq-results.csv.license  readme.md  shared.json
importtopackage/pypi_map/: pypi_importmap-0-20.json  pypi_importmap-1-20.json  pypi_importmap-13-20.json  pypi_importmap-14-20.json  pypi_importmap-16-20.json  pypi_importmap-17-20.json  pypi_importmap-18-20.json  pypi_importmap-19-20.json  pypi_importmap-3-20.json  pypi_importmap-4-20.json  pypi_importmap-6-20.json  pypi_importmap-8-20.json  pypi_importmap-9-20.json  pypi_importmap_errors-1-20.json  pypi_importmap_errors-10-20.json  pypi_importmap_errors-12-20.json  pypi_importmap_errors-15-20.json  pypi_importmap_errors-16-20.json  pypi_importmap_errors-18-20.json  pypi_importmap_errors-19-20.json  pypi_importmap_errors-4-20.json  pypi_importmap_errors-5-20.json  pypi_importmap_errors-7-20.json  pypi_importmap_errors-8-20.json  pypi_importmap_errors-9-20.json  pypi_versionmap-0-20.json  pypi_versionmap-10-20.json  pypi_versionmap-11-20.json  pypi_versionmap-13-20.json  pypi_versionmap-14-20.json  pypi_versionmap-15-20.json  pypi_versionmap-16-20.json  pypi_versionmap-17-20.json  pypi_versionmap-3-20.json  pypi_versionmap-4-20.json  pypi_versionmap-5-20.json  pypi_versionmap-6-20.json  pypi_versionmap-9-20.json
notebooks/: bioconductor.gexf  bioconductor_with_commits.gexf  cran.gexf  cran_with_commits.gexf  directed-core-analysis.ipynb  dois-graph.gexf  preprocess-this-is-a-bait-this-is-evas.ipynb.license  preprocess.ipynb  preprocess_two_node.ipynb  visualization.ipynb
quadrants_figure_table/: README.md  figure.rnw  tables.rnw  tables.rnw.license
src/: directed_onion_layers.py  katz_centrality.py
(+23 files in other folders)
